--- a/client/chat/src/App.css
+++ b/client/chat/src/App.css
@@ -40,6 +40,7 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
 body {
   background: #202020;
   color: white;
+  font-family: "Roboto Thin", serif;
 }
 
 
