--- a/client/chat/src/Components/Message/message.css
+++ b/client/chat/src/Components/Message/message.css
@@ -16,14 +16,12 @@
     background: #0a569e;
     border-radius: 0.375rem;
     max-width: 90%;
-    min-height: 40px;
     display: flex;
     justify-content: space-around;
     flex-direction: column;
     margin-bottom: 2%;
     margin-right: 2%;
-    padding-right: 5px;
-    padding-left: 5px;
+    padding: 5px;
 }
 
 .receivedMessage {
