--- a/client/chat/src/Components/Message/message.css
+++ b/client/chat/src/Components/Message/message.css
@@ -14,7 +14,7 @@
 .message {
     border: #0a569e 2px solid;
     background: #0a569e;
-    border-radius: 0.375rem;
+    border-radius: 0.9rem;
     max-width: 90%;
     display: flex;
     justify-content: space-around;
@@ -37,7 +37,8 @@
     text-align: left;
     font-size: 14px;
     font-weight: bold;
-    color: purple;
+    color: salmon;
+    margin-bottom: 5px;
 }
 
 .message_textTime {
