--- a/client/chat/src/Components/MessagesList/messagesList.css
+++ b/client/chat/src/Components/MessagesList/messagesList.css
@@ -1,9 +1,9 @@
 .messagesList {
-    /*border: black 2px solid;*/
     height: 90%;
     width: 100%;
     display: flex;
     flex-direction: column-reverse;
     align-items: end;
     overflow: scroll;
+    transition: 1s;
 }
